libclamav/clamav.h

/**
 * @brief Return codes used by libclamav functions.
 */
typedef enum cl_error_t {
    /* libclamav specific */
    CL_CLEAN   = 0,
    CL_SUCCESS = 0,
    CL_VIRUS,
    CL_ENULLARG,
    CL_EARG,
    CL_EMALFDB,
    CL_ECVD,
    CL_EVERIFY,
    CL_EUNPACK,

    /* I/O and memory errors */
    CL_EOPEN,
    CL_ECREAT,
    CL_EUNLINK,
    CL_ESTAT,
    CL_EREAD,
    CL_ESEEK,
    CL_EWRITE,
    CL_EDUP,
    CL_EACCES,
    CL_ETMPFILE,
    CL_ETMPDIR,
    CL_EMAP,
    CL_EMEM,
    CL_ETIMEOUT,

    /* internal (not reported outside libclamav) */
    CL_BREAK,
    CL_EMAXREC,
    CL_EMAXSIZE,
    CL_EMAXFILES,
    CL_EFORMAT,
    CL_EPARSE,
    CL_EBYTECODE,          /** may be reported in testmode */
    CL_EBYTECODE_TESTFAIL, /** may be reported in testmode */
    CL_ELOCK,
    CL_EBUSY,
    CL_ESTATE,

    CL_VERIFIED, /** The scan target has been deemed trusted */
    CL_ERROR,    /** Unspecified / generic error */

    /* no error codes below this line please */
    CL_ELAST_ERROR
} cl_error_t;
/* db options */
// clang-format off
#define CL_DB_PHISHING          0x2
#define CL_DB_PHISHING_URLS     0x8
#define CL_DB_PUA               0x10
#define CL_DB_CVDNOTMP          0x20    /** @deprecated obsolete */
#define CL_DB_OFFICIAL          0x40    /** internal */
#define CL_DB_PUA_MODE          0x80
#define CL_DB_PUA_INCLUDE       0x100
#define CL_DB_PUA_EXCLUDE       0x200
#define CL_DB_COMPILED          0x400   /** internal */
#define CL_DB_DIRECTORY         0x800   /** internal */
#define CL_DB_OFFICIAL_ONLY     0x1000
#define CL_DB_BYTECODE          0x2000
#define CL_DB_SIGNED            0x4000  /** internal */
#define CL_DB_BYTECODE_UNSIGNED 0x8000  /** Caution: You should never run bytecode signatures from untrusted sources.
#define CL_DB_BYTECODE_STATS    0x20000
#define CL_DB_ENHANCED          0x40000
#define CL_DB_PCRE_STATS        0x80000
#define CL_DB_YARA_EXCLUDE      0x100000
#define CL_DB_YARA_ONLY         0x200000
                                          *  Means: 1. CVD must be signed with external `.sign` file.
                                          *         2. Disables support for `.fp` signatures. */

/* recommended db settings */
#define CL_DB_STDOPT (CL_DB_PHISHING | CL_DB_PHISHING_URLS | CL_DB_BYTECODE)
/*** scan options ***/
struct cl_scan_options {
    uint32_t general;
    uint32_t parse;
    uint32_t heuristic;
    uint32_t mail;
    uint32_t dev;
};
/* general */
#define CL_SCAN_GENERAL_ALLMATCHES                  0x1  /** scan in all-match mode */
#define CL_SCAN_GENERAL_COLLECT_METADATA            0x2  /** collect metadata (--gen-json) */
#define CL_SCAN_GENERAL_HEURISTICS                  0x4  /** option to enable heuristic alerts */
#define CL_SCAN_GENERAL_HEURISTIC_PRECEDENCE        0x8  /** allow heuristic match to take precedence */
#define CL_SCAN_GENERAL_UNPRIVILEGED                0x10 /** scanner will not have read access to files */
/* parsing capabilities options */
#define CL_SCAN_PARSE_ARCHIVE                       0x1
#define CL_SCAN_PARSE_ELF                           0x2
#define CL_SCAN_PARSE_PDF                           0x4
#define CL_SCAN_PARSE_SWF                           0x8
#define CL_SCAN_PARSE_HWP3                          0x10
#define CL_SCAN_PARSE_XMLDOCS                       0x20
#define CL_SCAN_PARSE_MAIL                          0x40
#define CL_SCAN_PARSE_OLE2                          0x80
#define CL_SCAN_PARSE_HTML                          0x100
#define CL_SCAN_PARSE_PE                            0x200
#define CL_SCAN_PARSE_ONENOTE                       0x400
/* heuristic alerting options */
#define CL_SCAN_HEURISTIC_BROKEN                    0x2    /** alert on broken PE and broken ELF files */
#define CL_SCAN_HEURISTIC_EXCEEDS_MAX               0x4    /** alert when files exceed scan limits (filesize, max scansize, or max recursion depth) */
#define CL_SCAN_HEURISTIC_PHISHING_SSL_MISMATCH     0x8    /** alert on SSL mismatches */
#define CL_SCAN_HEURISTIC_PHISHING_CLOAK            0x10   /** alert on cloaked URLs in emails */
#define CL_SCAN_HEURISTIC_MACROS                    0x20   /** alert on OLE2 files containing macros */
#define CL_SCAN_HEURISTIC_ENCRYPTED_ARCHIVE         0x40   /** alert if archive is encrypted (rar, zip, etc) */
#define CL_SCAN_HEURISTIC_ENCRYPTED_DOC             0x80   /** alert if a document is encrypted (pdf, docx, etc) */
#define CL_SCAN_HEURISTIC_PARTITION_INTXN           0x100  /** alert if partition table size doesn't make sense */
#define CL_SCAN_HEURISTIC_STRUCTURED                0x200  /** data loss prevention options, i.e. alert when detecting personal information */
#define CL_SCAN_HEURISTIC_STRUCTURED_SSN_NORMAL     0x400  /** alert when detecting social security numbers */
#define CL_SCAN_HEURISTIC_STRUCTURED_SSN_STRIPPED   0x800  /** alert when detecting stripped social security numbers */
#define CL_SCAN_HEURISTIC_STRUCTURED_CC             0x1000 /** alert when detecting credit card numbers */
#define CL_SCAN_HEURISTIC_BROKEN_MEDIA              0x2000 /** alert if a file does not match the identified file format, works with JPEG, TIFF, GIF, PNG */
/* mail scanning options */
#define CL_SCAN_MAIL_PARTIAL_MESSAGE                0x1
/* dev options */
#define CL_SCAN_DEV_COLLECT_SHA                     0x1 /** @deprecated (functionality removed) */
#define CL_SCAN_DEV_COLLECT_PERFORMANCE_INFO        0x2 /** collect performance timings */
/* For the new engine_options bit field in the engine */
#define ENGINE_OPTIONS_NONE             0x0
#define ENGINE_OPTIONS_DISABLE_CACHE    0x1
#define ENGINE_OPTIONS_FORCE_TO_DISK    0x2
/* 0x4 was ENGINE_OPTIONS_DISABLE_PE_STATS; keep later bits stable. */
#define ENGINE_OPTIONS_DISABLE_PE_CERTS 0x8
#define ENGINE_OPTIONS_PE_DUMPCERTS     0x10
// clang-format on

struct cl_engine;
struct cl_settings;
/* ----------------------------------------------------------------------------
 * Enable global libclamav features.
 */

/**
 * @brief Enable debug messages
 */
extern void cl_debug(void);
/* ----------------------------------------------------------------------------
 * Scan engine functions.
 */

/**
 * @brief This function initializes the openssl crypto system.
 *
 * Called by cl_init() and does not need to be cleaned up as de-init
 * is handled automatically by openssl 1.0.2.h and 1.1.0
 *
 * @return Always returns 0
 */
int cl_initialize_crypto(void);
/**
 * @brief Clean up ssl crypto inits.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 *             Call to EVP_cleanup() has been removed since cleanup is now handled by
 *             auto-deinit as of openssl 1.0.2h and 1.1.0.
 */
void cl_cleanup_crypto(void);
#define CL_INIT_DEFAULT 0x0
/**
 * @brief Initialize the ClamAV library.
 *
 * @param initoptions   Unused.
 * @return cl_error_t   CL_SUCCESS if everything initialized correctly.
 */
extern cl_error_t cl_init(unsigned int initoptions);
/**
 * @brief Allocate a new scanning engine and initialize default settings.
 *
 * The engine must be freed with `cl_engine_free()`.
 *
 * @return struct cl_engine* Pointer to the scanning engine.
 */
extern struct cl_engine *cl_engine_new(void);
enum cl_engine_field {
    CL_ENGINE_MAX_SCANSIZE,        /** uint64_t */
    CL_ENGINE_MAX_FILESIZE,        /** uint64_t */
    CL_ENGINE_MAX_RECURSION,       /** uint32_t */
    CL_ENGINE_MAX_FILES,           /** uint32_t */
    CL_ENGINE_MIN_CC_COUNT,        /** uint32_t */
    CL_ENGINE_MIN_SSN_COUNT,       /** uint32_t */
    CL_ENGINE_PUA_CATEGORIES,      /** (char *) */
    CL_ENGINE_DB_OPTIONS,          /** uint32_t */
    CL_ENGINE_DB_VERSION,          /** uint32_t */
    CL_ENGINE_DB_TIME,             /** time_t */
    CL_ENGINE_AC_ONLY,             /** uint32_t */
    CL_ENGINE_AC_MINDEPTH,         /** uint32_t */
    CL_ENGINE_AC_MAXDEPTH,         /** uint32_t */
    CL_ENGINE_TMPDIR,              /** (char *) */
    CL_ENGINE_KEEPTMP,             /** uint32_t */
    CL_ENGINE_BYTECODE_SECURITY,   /** uint32_t */
    CL_ENGINE_BYTECODE_TIMEOUT,    /** uint32_t */
    CL_ENGINE_BYTECODE_MODE,       /** uint32_t */
    CL_ENGINE_MAX_EMBEDDEDPE,      /** uint64_t */
    CL_ENGINE_MAX_HTMLNORMALIZE,   /** uint64_t */
    CL_ENGINE_MAX_HTMLNOTAGS,      /** uint64_t */
    CL_ENGINE_MAX_SCRIPTNORMALIZE, /** uint64_t */
    CL_ENGINE_MAX_ZIPTYPERCG,      /** uint64_t */
    CL_ENGINE_FORCETODISK,         /** uint32_t */
    CL_ENGINE_CACHE_SIZE,          /** uint32_t */
    CL_ENGINE_DISABLE_CACHE,       /** uint32_t */
    CL_ENGINE_MAX_PARTITIONS,      /** uint32_t */
    CL_ENGINE_MAX_ICONSPE,         /** uint32_t */
    CL_ENGINE_MAX_RECHWP3,         /** uint32_t */
    CL_ENGINE_MAX_SCANTIME,        /** uint32_t */
    CL_ENGINE_PCRE_MATCH_LIMIT,    /** uint64_t */
    CL_ENGINE_PCRE_RECMATCH_LIMIT, /** uint64_t */
    CL_ENGINE_PCRE_MAX_FILESIZE,   /** uint64_t */
    CL_ENGINE_DISABLE_PE_CERTS,    /** uint32_t */
    CL_ENGINE_PE_DUMPCERTS,        /** uint32_t */
    CL_ENGINE_CVDCERTSDIR,         /** (char *) */
    CL_ENGINE_TMPDIR_RECURSION,    /** uint32_t */
    CL_ENGINE_FIPS_LIMITS,         /** uint32_t */
    CL_ENGINE_PCRE_JIT,            /** uint32_t */
};
/**
 * @brief Free an engine.
 *
 * Will lower the reference count on an engine. If the reference count hits
 * zero, the engine will be freed.
 *
 * @param engine        A scan engine.
 * @return cl_error_t   CL_SUCCESS if successful.
 * @return cl_error_t   CL_ENULLARG null arguments were provided.
 */
extern cl_error_t cl_engine_free(struct cl_engine *engine);
/*
 * Attributes of each layer in scan.
 */
#define LAYER_ATTRIBUTES_NONE 0x0       /**< No attributes set. */
#define LAYER_ATTRIBUTES_NORMALIZED 0x1 /**< This layer was modified to make matching more generic, reliable. */
#define LAYER_ATTRIBUTES_DECRYPTED 0x2  /**< Decryption was used to extract this layer. \
                                         *   E.g. ClamAV was able to decrypt an encrypted file entry in the parent layer. */