clamav-sys/no-libclang/bindings.rs

/* automatically generated by rust-bindgen 0.69.2 */

pub const CL_DB_PHISHING: u32 = 2;
pub const CL_DB_PHISHING_URLS: u32 = 8;
pub const CL_DB_PUA: u32 = 16;
pub const CL_DB_CVDNOTMP: u32 = 32;
pub const CL_DB_OFFICIAL: u32 = 64;
pub const CL_DB_PUA_MODE: u32 = 128;
pub const CL_DB_PUA_INCLUDE: u32 = 256;
pub const CL_DB_PUA_EXCLUDE: u32 = 512;
pub const CL_DB_COMPILED: u32 = 1024;
pub const CL_DB_DIRECTORY: u32 = 2048;
pub const CL_DB_OFFICIAL_ONLY: u32 = 4096;
pub const CL_DB_BYTECODE: u32 = 8192;
pub const CL_DB_SIGNED: u32 = 16384;
pub const CL_DB_BYTECODE_UNSIGNED: u32 = 32768;
pub const CL_DB_UNSIGNED: u32 = 65536;
pub const CL_DB_BYTECODE_STATS: u32 = 131072;
pub const CL_DB_ENHANCED: u32 = 262144;
pub const CL_DB_PCRE_STATS: u32 = 524288;
pub const CL_DB_YARA_EXCLUDE: u32 = 1048576;
pub const CL_DB_YARA_ONLY: u32 = 2097152;
pub const CL_DB_STDOPT: u32 = 8202;
pub const CL_SCAN_GENERAL_ALLMATCHES: u32 = 1;
pub const CL_SCAN_GENERAL_COLLECT_METADATA: u32 = 2;
pub const CL_SCAN_GENERAL_HEURISTICS: u32 = 4;
pub const CL_SCAN_GENERAL_HEURISTIC_PRECEDENCE: u32 = 8;
pub const CL_SCAN_GENERAL_UNPRIVILEGED: u32 = 16;
pub const CL_SCAN_PARSE_ARCHIVE: u32 = 1;
pub const CL_SCAN_PARSE_ELF: u32 = 2;
pub const CL_SCAN_PARSE_PDF: u32 = 4;
pub const CL_SCAN_PARSE_SWF: u32 = 8;
pub const CL_SCAN_PARSE_HWP3: u32 = 16;
pub const CL_SCAN_PARSE_XMLDOCS: u32 = 32;
pub const CL_SCAN_PARSE_MAIL: u32 = 64;
pub const CL_SCAN_PARSE_OLE2: u32 = 128;
pub const CL_SCAN_PARSE_HTML: u32 = 256;
pub const CL_SCAN_PARSE_PE: u32 = 512;
pub const CL_SCAN_PARSE_ONENOTE: u32 = 1024;
pub const CL_SCAN_HEURISTIC_BROKEN: u32 = 2;
pub const CL_SCAN_HEURISTIC_EXCEEDS_MAX: u32 = 4;
pub const CL_SCAN_HEURISTIC_PHISHING_SSL_MISMATCH: u32 = 8;
pub const CL_SCAN_HEURISTIC_PHISHING_CLOAK: u32 = 16;
pub const CL_SCAN_HEURISTIC_MACROS: u32 = 32;
pub const CL_SCAN_HEURISTIC_ENCRYPTED_ARCHIVE: u32 = 64;
pub const CL_SCAN_HEURISTIC_ENCRYPTED_DOC: u32 = 128;
pub const CL_SCAN_HEURISTIC_PARTITION_INTXN: u32 = 256;
pub const CL_SCAN_HEURISTIC_STRUCTURED: u32 = 512;
pub const CL_SCAN_HEURISTIC_STRUCTURED_SSN_NORMAL: u32 = 1024;
pub const CL_SCAN_HEURISTIC_STRUCTURED_SSN_STRIPPED: u32 = 2048;
pub const CL_SCAN_HEURISTIC_STRUCTURED_CC: u32 = 4096;
pub const CL_SCAN_HEURISTIC_BROKEN_MEDIA: u32 = 8192;
pub const CL_SCAN_MAIL_PARTIAL_MESSAGE: u32 = 1;
pub const CL_SCAN_DEV_COLLECT_SHA: u32 = 1;
pub const CL_SCAN_DEV_COLLECT_PERFORMANCE_INFO: u32 = 2;
pub const ENGINE_OPTIONS_NONE: u32 = 0;
pub const ENGINE_OPTIONS_DISABLE_CACHE: u32 = 1;
pub const ENGINE_OPTIONS_FORCE_TO_DISK: u32 = 2;
pub const ENGINE_OPTIONS_DISABLE_PE_STATS: u32 = 4;
pub const ENGINE_OPTIONS_DISABLE_PE_CERTS: u32 = 8;
pub const ENGINE_OPTIONS_PE_DUMPCERTS: u32 = 16;
pub const CL_INIT_DEFAULT: u32 = 0;
pub const LAYER_ATTRIBUTES_NONE: u32 = 0;
pub const LAYER_ATTRIBUTES_NORMALIZED: u32 = 1;
pub const LAYER_ATTRIBUTES_DECRYPTED: u32 = 2;
pub type __int64_t = ::std::os::raw::c_longlong;
pub type __darwin_time_t = ::std::os::raw::c_long;
pub type __darwin_off_t = __int64_t;
pub type time_t = __darwin_time_t;
pub type off_t = __darwin_off_t;
impl cl_error_t {
    pub const CL_CLEAN: cl_error_t = cl_error_t(0);
}
impl cl_error_t {
    pub const CL_SUCCESS: cl_error_t = cl_error_t(0);
}
impl cl_error_t {
    pub const CL_VIRUS: cl_error_t = cl_error_t(1);
}
impl cl_error_t {
    pub const CL_ENULLARG: cl_error_t = cl_error_t(2);
}
impl cl_error_t {
    pub const CL_EARG: cl_error_t = cl_error_t(3);
}
impl cl_error_t {
    pub const CL_EMALFDB: cl_error_t = cl_error_t(4);
}
impl cl_error_t {
    pub const CL_ECVD: cl_error_t = cl_error_t(5);
}
impl cl_error_t {
    pub const CL_EVERIFY: cl_error_t = cl_error_t(6);
}
impl cl_error_t {
    pub const CL_EUNPACK: cl_error_t = cl_error_t(7);
}
impl cl_error_t {
    pub const CL_EOPEN: cl_error_t = cl_error_t(8);
}
impl cl_error_t {
    pub const CL_ECREAT: cl_error_t = cl_error_t(9);
}
impl cl_error_t {
    pub const CL_EUNLINK: cl_error_t = cl_error_t(10);
}
impl cl_error_t {
    pub const CL_ESTAT: cl_error_t = cl_error_t(11);
}
impl cl_error_t {
    pub const CL_EREAD: cl_error_t = cl_error_t(12);
}
impl cl_error_t {
    pub const CL_ESEEK: cl_error_t = cl_error_t(13);
}
impl cl_error_t {
    pub const CL_EWRITE: cl_error_t = cl_error_t(14);
}
impl cl_error_t {
    pub const CL_EDUP: cl_error_t = cl_error_t(15);
}
impl cl_error_t {
    pub const CL_EACCES: cl_error_t = cl_error_t(16);
}
impl cl_error_t {
    pub const CL_ETMPFILE: cl_error_t = cl_error_t(17);
}
impl cl_error_t {
    pub const CL_ETMPDIR: cl_error_t = cl_error_t(18);
}
impl cl_error_t {
    pub const CL_EMAP: cl_error_t = cl_error_t(19);
}
impl cl_error_t {
    pub const CL_EMEM: cl_error_t = cl_error_t(20);
}
impl cl_error_t {
    pub const CL_ETIMEOUT: cl_error_t = cl_error_t(21);
}
impl cl_error_t {
    pub const CL_BREAK: cl_error_t = cl_error_t(22);
}
impl cl_error_t {
    pub const CL_EMAXREC: cl_error_t = cl_error_t(23);
}
impl cl_error_t {
    pub const CL_EMAXSIZE: cl_error_t = cl_error_t(24);
}
impl cl_error_t {
    pub const CL_EMAXFILES: cl_error_t = cl_error_t(25);
}
impl cl_error_t {
    pub const CL_EFORMAT: cl_error_t = cl_error_t(26);
}
impl cl_error_t {
    pub const CL_EPARSE: cl_error_t = cl_error_t(27);
}
impl cl_error_t {
    pub const CL_EBYTECODE: cl_error_t = cl_error_t(28);
}
impl cl_error_t {
    pub const CL_EBYTECODE_TESTFAIL: cl_error_t = cl_error_t(29);
}
impl cl_error_t {
    pub const CL_ELOCK: cl_error_t = cl_error_t(30);
}
impl cl_error_t {
    pub const CL_EBUSY: cl_error_t = cl_error_t(31);
}
impl cl_error_t {
    pub const CL_ESTATE: cl_error_t = cl_error_t(32);
}
impl cl_error_t {
    pub const CL_VERIFIED: cl_error_t = cl_error_t(33);
}
impl cl_error_t {
    pub const CL_ERROR: cl_error_t = cl_error_t(34);
}
impl cl_error_t {
    pub const CL_ELAST_ERROR: cl_error_t = cl_error_t(35);
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct cl_error_t(pub ::std::os::raw::c_uint);
#[doc = " scan options"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cl_scan_options {
    pub general: u32,
    pub parse: u32,
    pub heuristic: u32,
    pub mail: u32,
    pub dev: u32,
}
#[test]
fn bindgen_test_layout_cl_scan_options() {
    const UNINIT: ::std::mem::MaybeUninit<cl_scan_options> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cl_scan_options>(),
        20usize,
        concat!("Size of: ", stringify!(cl_scan_options))
    );
    assert_eq!(
        ::std::mem::align_of::<cl_scan_options>(),
        4usize,
        concat!("Alignment of ", stringify!(cl_scan_options))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).general) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_scan_options),
            "::",
            stringify!(general)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).parse) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_scan_options),
            "::",
            stringify!(parse)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).heuristic) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_scan_options),
            "::",
            stringify!(heuristic)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mail) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_scan_options),
            "::",
            stringify!(mail)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dev) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_scan_options),
            "::",
            stringify!(dev)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cl_engine {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cl_settings {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " @brief Enable debug messages"]
    pub fn cl_debug();
}
extern "C" {
    #[doc = " @brief This function initializes the openssl crypto system.\n\n Called by cl_init() and does not need to be cleaned up as de-init\n is handled automatically by openssl 1.0.2.h and 1.1.0\n\n @return Always returns 0"]
    pub fn cl_initialize_crypto() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief This is a deprecated function that used to clean up ssl crypto inits.\n\n Call to EVP_cleanup() has been removed since cleanup is now handled by\n auto-deinit as of openssl 1.0.2h and 1.1.0"]
    pub fn cl_cleanup_crypto();
}
extern "C" {
    #[doc = " @brief Initialize the ClamAV library.\n\n @param initoptions   Unused.\n @return cl_error_t   CL_SUCCESS if everything initialized correctly."]
    pub fn cl_init(initoptions: ::std::os::raw::c_uint) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Allocate a new scanning engine and initialize default settings.\n\n The engine should be freed with `cl_engine_free()`.\n\n @return struct cl_engine* Pointer to the scanning engine."]
    pub fn cl_engine_new() -> *mut cl_engine;
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_SCANSIZE: cl_engine_field = cl_engine_field(0);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_FILESIZE: cl_engine_field = cl_engine_field(1);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_RECURSION: cl_engine_field = cl_engine_field(2);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_FILES: cl_engine_field = cl_engine_field(3);
}
impl cl_engine_field {
    pub const CL_ENGINE_MIN_CC_COUNT: cl_engine_field = cl_engine_field(4);
}
impl cl_engine_field {
    pub const CL_ENGINE_MIN_SSN_COUNT: cl_engine_field = cl_engine_field(5);
}
impl cl_engine_field {
    pub const CL_ENGINE_PUA_CATEGORIES: cl_engine_field = cl_engine_field(6);
}
impl cl_engine_field {
    pub const CL_ENGINE_DB_OPTIONS: cl_engine_field = cl_engine_field(7);
}
impl cl_engine_field {
    pub const CL_ENGINE_DB_VERSION: cl_engine_field = cl_engine_field(8);
}
impl cl_engine_field {
    pub const CL_ENGINE_DB_TIME: cl_engine_field = cl_engine_field(9);
}
impl cl_engine_field {
    pub const CL_ENGINE_AC_ONLY: cl_engine_field = cl_engine_field(10);
}
impl cl_engine_field {
    pub const CL_ENGINE_AC_MINDEPTH: cl_engine_field = cl_engine_field(11);
}
impl cl_engine_field {
    pub const CL_ENGINE_AC_MAXDEPTH: cl_engine_field = cl_engine_field(12);
}
impl cl_engine_field {
    pub const CL_ENGINE_TMPDIR: cl_engine_field = cl_engine_field(13);
}
impl cl_engine_field {
    pub const CL_ENGINE_KEEPTMP: cl_engine_field = cl_engine_field(14);
}
impl cl_engine_field {
    pub const CL_ENGINE_BYTECODE_SECURITY: cl_engine_field = cl_engine_field(15);
}
impl cl_engine_field {
    pub const CL_ENGINE_BYTECODE_TIMEOUT: cl_engine_field = cl_engine_field(16);
}
impl cl_engine_field {
    pub const CL_ENGINE_BYTECODE_MODE: cl_engine_field = cl_engine_field(17);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_EMBEDDEDPE: cl_engine_field = cl_engine_field(18);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_HTMLNORMALIZE: cl_engine_field = cl_engine_field(19);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_HTMLNOTAGS: cl_engine_field = cl_engine_field(20);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_SCRIPTNORMALIZE: cl_engine_field = cl_engine_field(21);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_ZIPTYPERCG: cl_engine_field = cl_engine_field(22);
}
impl cl_engine_field {
    pub const CL_ENGINE_FORCETODISK: cl_engine_field = cl_engine_field(23);
}
impl cl_engine_field {
    pub const CL_ENGINE_CACHE_SIZE: cl_engine_field = cl_engine_field(24);
}
impl cl_engine_field {
    pub const CL_ENGINE_DISABLE_CACHE: cl_engine_field = cl_engine_field(25);
}
